--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,13 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
   # Provider
   provider: ^6.0.5
+
+  # faker
+  faker: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +68,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/images/bg_home_top.jfif
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
