add Google Map page

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,7 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    namespace 'com.example.flutter_minjing_stylish'
 }
 
 flutter {
