--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   google_maps_flutter: ^2.2.5
   google_maps_flutter_web: ^0.4.0+8
 
+  # 地圖
+  flutter_polyline_points: ^1.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
