--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,19 @@
+//pluginManagement {
+//    repositories {
+//        gradlePluginPortal()
+//        google()
+//        mavenCentral()
+//    }
+//}
+//
+//dependencyResolutionManagement {
+//    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//}
+
 include ':app'
 
 def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
