--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,12 @@ dependencies:
 
   # AR 套件
   arcore_flutter_plugin: ^0.1.0
+  vector_math: ^2.1.4
   camera: ^0.9.4+5
+  ar_flutter_plugin: ^0.7.3
+
+  # 解決 build APK 錯誤
+#  flutter_plugin_android_lifecycle: ^2.0.14
 
 dependency_overrides:
   # 解決 firebase 依賴項衝突
