--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,10 +74,12 @@ dependencies:
   permission_handler: ^10.2.0
 
   # AR 套件
-  arcore_flutter_plugin: ^0.1.0
+#  arcore_flutter_plugin: ^0.1.0
+#  ar_flutter_plugin: ^0.7.3
+  arkit_plugin: ^1.0.6
   vector_math: ^2.1.4
   camera: ^0.9.4+5
-  ar_flutter_plugin: ^0.7.3
+
 
   # 解決 build APK 錯誤
 #  flutter_plugin_android_lifecycle: ^2.0.14
